add fabricate quantity

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 NotBlank.order.orderDeadline=Wprowadź datę
 Min.order.quantityPlaned=Nieprawidłowa wartość
-#Min.order.quantityCheckedIn=Nieprawidłowa wartość
-#methodInvocation.order.quantityCheckedIn=Wprowadź wartość
+Min.task.quantity=Nieprawidłowa wartość
+methodInvocation.task.quantity=Wprowadź wartość
 methodInvocation.order.quantityPlaned=Wprowadź wartość
+NotBlank.task.id=Brak Zleceń Spróbuj Później
