--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,5 @@ Min.task.quantity=Nieprawidłowa wartość
 methodInvocation.task.quantity=Wprowadź wartość
 methodInvocation.order.quantityPlaned=Wprowadź wartość
 NotBlank.task.id=Brak Zleceń Spróbuj Później
+typeMismatch.task.quantity=Bez przesady na pewno tyle nie zrobiłeś
+typeMismatch.order.quantityPlaned=Za duża wartość Spróbuj ponownie
